# LLM-Middleman

./: .copier-answers.yml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  UPGRADING.md  compose.override.yml  compose.yml  copier.yml  hacs.json  justfile  mkdocs.yml  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/commands/: rebase-pr.md
.claude/hooks/: deny-guardrails.sh
.claude/skills/generate-python-project/: SKILL.md
.claude/skills/release-template/: SKILL.md
.claude/skills/render-test/: SKILL.md
.claude/skills/template-dev/: SKILL.md
.devcontainer/: devcontainer-lock.json  devcontainer.json  initialize  initialize.cmd  post-create.sh  post-start.sh
.github/: dependabot.yml  renovate.json
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/render-test/: no-dead-vars.sh  test_update.py
.github/render-test/answers/: lib-off.yml  lib-on.yml  lib-variations.yml  svc-off.yml  svc-on.yml  svc-variations.yml
.github/workflows/: audit.yml  ci.yml  docker-publish.yml  docs.yml  hadolint.yml  image-scan.yml  integration.yml  labeler.yml  lint.yml  pr-title.yml  pre-commit.yml  render-test.yml  validate.yml
custom_components/llm_middleman/: __init__.py  config_flow.py  const.py  conversation.py  diagnostics.py  manifest.json  strings.json
custom_components/llm_middleman/backends/: __init__.py  _history.py  _sse.py  base.py  converse.py  dify.py  langgraph.py  n8n.py  ollama.py  openai_compat.py
custom_components/llm_middleman/translations/: en.json
docs/: api-reference.md  index.md  litellm-client-integration.md  quickstart.md
docs/adr/: template.md
docs/external-agent-handoff/: README.md  implementation-brief.md  llm-providers.md  mcp-to-home-assistant.md
docs/implementation/: HANDOFF.md  OWNER-CHECKLIST.md  README.md  plan.md
docs/implementation/e2e-results/: MATRIX.md  converse.md  hacs.md  langgraph-raw-capture.txt  langgraph.md  n8n-raw-capture.txt  n8n.md  ollama.md  openai_compat.md
docs/implementation/tickets/: LLMM-001-tooling-manifest-housekeeping.md  LLMM-002-sse-reader.md  LLMM-003-adapter-interface-factory.md  LLMM-004-test-harness-port.md  LLMM-005-conversation-entity.md  LLMM-006-parent-config-flow.md  LLMM-007-conversation-subentry-flow.md  LLMM-008-openai-compatible-adapter.md  LLMM-009-converse-adapter.md  LLMM-010-ollama-adapter.md  LLMM-011-langgraph-adapter.md  LLMM-012-n8n-adapter.md  LLMM-013-v0-migration.md  LLMM-014-tool-loop-core-openai-tools.md  LLMM-015-ollama-tool-support.md  LLMM-016-diagnostics.md  LLMM-017-docs-rewrite.md  LLMM-018-live-e2e-verification-matrix.md  LLMM-019-release-engineering.md  LLMM-020-dify-adapter.md
docs/knowledge/: 01-home-assistant-reference.md  02-llm-backends-and-providers.md  03-the-shim.md  04-the-passthrough-plan.md  05-architecture-decisions-and-tradeoffs.md  06-glossary-and-references.md  README.md
docs/plans/: dev-environment.md  middleman-implementation-brief.md
host_setup_scripts/: start-host-ssh-agent-mac-linux.sh
scripts/e2e/: E2E-ENABLEMENT-GUIDE.md  README.md  converse_sse_stub.py
src/llm_middleman/: __init__.py  __main__.py  app.py  config.py  pretty.py
src/llm_middleman/testing/: __init__.py
template/: .copier-answers.yml.jinja  .dockerignore  .editorconfig  .env.example.jinja  .gitattributes  .python-version.jinja  CLAUDE.md.jinja  CONTRIBUTING.md.jinja  Dockerfile.jinja  LICENSE.jinja  README.md.jinja  UPGRADING.md.jinja  compose.override.yml.jinja  compose.yml.jinja  justfile.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  pyrightconfig.json.jinja
template/.claude/commands/: setup-worktree.md
template/.claude/hooks/: session-start.sh
template/.claude/skills/update-project/: SKILL.md
template/.devcontainer/: devcontainer.json.jinja  post-start.sh
template/.github/: dependabot.yml  labeler.yml
template/.github/DISCUSSION_TEMPLATE/: questions.yml.jinja
template/.github/workflows/: audit.yml.jinja  ci.yml.jinja  docker-publish.yml.jinja  docs.yml.jinja  hadolint.yml.jinja  image-scan.yml.jinja  integration.yml.jinja  labeler.yml.jinja  pr-title.yml.jinja  pre-commit.yml.jinja  release.yml.jinja
template/docs/: index.md.jinja  quickstart.md.jinja
template/docs/adr/: README.md
template/host_setup_scripts/: start-host-ssh-agent-windows.ps1
template/secrets/: app_secret.txt.example
template/src/{{ package_name }}/: __init__.py.jinja  __main__.py.jinja  app.py.jinja  config.py.jinja  mcp_server.py.jinja  pretty.py.jinja
template/src/{{ package_name }}/testing/: __init__.py.jinja
template/tests/: test_app.py.jinja  test_pretty.py.jinja  test_smoke.py.jinja  test_testing_helpers.py.jinja
template/tests/contract/: test_contract_smoke.py.jinja
tests/: __init__.py  conftest.py  test_app.py  test_backends_base.py  test_config_flow.py  test_conversation.py  test_diagnostics.py  test_harness_smoke.py  test_init.py  test_pretty.py  test_smoke.py  test_sse.py  test_testing_helpers.py
tests/backends/: __init__.py  test_converse.py  test_dify.py  test_langgraph.py  test_n8n.py  test_ollama.py  test_openai_compat.py
tests/integration/: conftest.py  test_smoke_integration.py
