[project]
name = "llm-middleman"
description = "Passthrough middleman service bridging Home Assistant Assist/Voice to an external LLM agent"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "David Allada", email = "davidanilallada@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/allada-homelab/LLM-Middleman"
Source = "https://github.com/allada-homelab/LLM-Middleman"
Issues = "https://github.com/allada-homelab/LLM-Middleman/issues"
Changelog = "https://github.com/allada-homelab/LLM-Middleman/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Worked example: an optional capability gated behind an extra. Install with
# `uv sync --extra pretty` (or `pip install llm-middleman[pretty]`).
pretty = ["rich>=13"]


[project.scripts]
llm-middleman = "llm_middleman.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/llm_middleman/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_middleman"]

[tool.hatch.build.targets.sdist]
include = [
    "src/llm_middleman",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
    "LICENSE",
]
exclude = ["tests"]

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "type" },
    "pre-commit>=4",
]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6",
    "coverage[toml]>=7.6",
    "httpx>=0.27",
    "testcontainers>=4",
]
lint = [
    "ruff>=0.11",
    "codespell>=2.3",
]
type = [
    "basedpyright>=1.20",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[tool.uv]
# Floor the uv binary so contributors/CI/Docker resolve an identical uv.lock.
required-version = ">=0.5.14"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "UP", "B", "SIM", "C4", "RUF", "S",
    "A", "PT", "RET", "PTH", "FA", "TC", "ARG", "T20",
]
ignore = [
    "E501",   # line length handled by the formatter
    "B008",   # function calls in argument defaults (FastAPI Depends idiom)
    "RET504", # unnecessary assignment before return
    "UP046",  # PEP 695 generics (class X[T]) — illegal on the 3.11 support floor
    "UP047",  # PEP 695 generic functions — same reason
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S311", "ARG", "B011"]
# FastAPI resolves route annotations at runtime, so TC (move-to-TYPE_CHECKING) misfires here.
"src/llm_middleman/app.py" = ["TC"]


[tool.ruff.lint.isort]
known-first-party = ["llm_middleman"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --strict-markers --strict-config -ra -m 'not integration'"
filterwarnings = [
    "error",
]
xfail_strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: requires docker/containers (deselected by default)",
]

[tool.coverage.run]
source = ["src/llm_middleman"]
omit = [
    "src/llm_middleman/__main__.py",
    "src/llm_middleman/pretty.py",
]

[tool.coverage.report]
show_missing = true
sort = "-Cover"
fail_under = 80
