[project]
name = "llm-middleman"
version = "0.1.0"
description = "Home Assistant passthrough conversation agent that forwards Assist turns to an external LLM agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "homeassistant",
    "aiohttp",
    "voluptuous",
]

[dependency-groups]
dev = [
    "basedpyright",
    "hassil>=3.0",
    "home-assistant-intents>=2026.2.3",
    "pre-commit>=4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component",
    "pyturbojpeg==1.8.0",  # HA camera component dep (pinned to match HA); pulled in transitively by the HA test harness
    "ruff>=0.9",
]

[tool.uv]
required-version = ">=0.8.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config"]

[tool.ruff]
target-version = "py313"  # lint against the minimum supported Python (requires-python >=3.13), not the dev runtime
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # asserts are pytest's primary mechanism
    "S105",   # hardcoded test secrets in fixtures are OK
    "S106",   # same — test secrets passed as kwargs
    "S107",   # same — test secrets as defaults
]
"**/__init__.py" = [
    "F401",   # re-exports look unused to pyflakes
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.llm_middleman"]
